--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   	<link rel="stylesheet" href='css/reset.css' >
   	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
 
+  	<!-- Load font awesome icons -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" >
+
   <!-- JS
   	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   	<script src="js/client.js"></script>
@@ -44,13 +47,261 @@
   <h2 class="f6 gray fw2 ttu tracked">@ National University of Singapore</h2>
 </header>
 
+<!-- 
+	Cool Ideas
+https://codepen.io/alvaromontoro/pen/ebPEWb 
+
+
+https://codepen.io/sowmyaseshadri/pen/KxQMEP
+
+https://freefrontend.com/css-cards/
+-->
 <section>
 
+<div class="cf w-100 ">
+
+	<div class="pa1-l ph5-l">
 
 
 
-  <!-- Actual site
-  	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <div class="fl w-50 w-25-m w-25-l pa1 pt4 ">
+    	<div class="aspect-ratio aspect-ratio--1x1  hide-child link">
+    		<div class="white  child bg-black-80 pa2 z-4 relative pa5-l">
+			    cozie is a fitbit platform for human comfort data collection
+			    <br/>
+			    <a href = "https://www.cozie.app" class="link underline orange" target="_blank"> cozie-website <a>
+			</div>
+      		<div class="bg-center bg-white cover aspect-ratio--object z-2">
+  				<div class="fl w-100 v-mid center pa3 pa5-l">
+    				<img src="img/cozie_square.png" alt="" class="db w-100"/>
+    				    				  	<div href="#0" class="ph2 ph0-ns pb3 link w-100">
+      						<p class="f6 f5 fw7 mt2 gray tc">cozie watch-face</p>
+    					</div>
+  				</div>
+      		</div>
+    	</div>
+    </div>
+
+
+
+    <div class="fl w-50 w-25-m w-25-l pa1 pt4 ">
+    	<div class="aspect-ratio aspect-ratio--1x1  hide-child link ">
+    		<div class="white  child bg-black-80 pa2 z-4 relative pa5-l">
+			    An AI-enhanced spatial recommendation engine that matches building occupants to suitable workspaces based on comfort preferences
+			    <br/>
+			    <a href = "https://www.spacematch.me/" class="link underline orange" target="_blank"> spacematch info site <a>
+			</div>
+      		<div class="bg-center bg-white cover aspect-ratio--object z-2">
+  				<div class="fl w-100 v-mid center pa3 pa5-l">
+    				<img src="https://images.squarespace-cdn.com/content/v1/5cb5682ec2ff617789977d59/1556001840366-L4U6DILQ0V7RXFZS3NXV/ke17ZwdGBToddI8pDm48kA1koShQp8A7ABmkvKdLBc57gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QHyNOqBUUEtDDsRWrJLTmb_qy5IFWVNEIFW3oOcgTh4acKmQKo_g6FXml9LHCKi9ChwQTKZLVlm9QfzudAab2/Screenshot+2019-04-23+at+12.13.30+PM.png?format=1500w" alt="" class="db w-100"/>
+    				    				  	<div href="#0" class="ph2 ph0-ns pb3 link w-100">
+      						<p class="f6 f5 fw7 mt2 gray tc">Spacematch</p>
+    					</div>
+  				</div>
+      		</div>
+
+    	</div>
+    </div>
+
+	<div class="fl w-50 w-25-m w-25-l pa1 pt4 ">
+    	<div class="aspect-ratio aspect-ratio--1x1  hide-child link ">
+    		<div class="white  child bg-black-80 pa2 z-4 relative  pa5-l">
+			    A open data set of hundreds of non-residential buildings from around the world with various temporal data mining techniques implemented
+			    <br/>
+			    <a href = "https://github.com/buds-lab/the-building-data-genome-project" class="link underline orange" target="_blank"> data set <a>
+			</div>
+      		<div class="bg-center bg-white cover aspect-ratio--object z-2">
+  				<div class="fl w-100 v-mid center pa3 pa5-l">
+    				<img src="img/buildingGenomeLogo.png" alt="" class="db w-100"/>
+    				    				  	<div href="#0" class="ph2 ph0-ns pb3 link w-100">
+      						<p class="f6 f5 fw7 mt2 gray tc">Building Data Genome Project</p>
+    					</div>
+  				</div>
+      		</div>
+    	</div>
+    </div>
+
+    <div class="fl w-50 w-25-m w-25-l pa1 pt4 ">
+    	<div class="aspect-ratio aspect-ratio--1x1  hide-child link ">
+    		<div class="white  child bg-black-80 pa2 z-4 relative pa5-l">
+			    SDE Learning Trail is a simple, easy to use web application to collect comfort feedback from building occupants and visitors while they interact, learn and engage with SDE4.
+			    <br/>
+			    <a href = "http://learningtrail.me/" class="link underline orange" target="_blank"> learning trail info site <a>
+			</div>
+      		<div class="bg-center bg-white cover aspect-ratio--object z-2">
+  				<div class="fl w-100 v-mid center pa3 pa5-l">
+    				<img src="http://learningtrail.me/assets/Thicker%20Final%20logo-01.jpg" alt="" class="db w-100"/>
+    				    				  	<div href="#0" class="ph2 ph0-ns pb3 link w-100">
+      						<p class="f6 f5 fw7 mt2 gray tc">Learning Trail</p>
+    					</div>
+  				</div>
+      		</div>
+    	</div>
+    </div>
+
+    <div class="fl w-50 w-25-m w-25-l pa1 pt4 ">
+    	<div class="aspect-ratio aspect-ratio--1x1  hide-child link ">
+    		<div class="white  child bg-black-80 pa2 z-4 relative pa5-l">
+			    SDE Learning Trail is a simple, easy to use web application to collect comfort feedback from building occupants and visitors while they interact, learn and engage with SDE4.
+			    <br/>
+			    <a href = "http://learningtrail.me/" class="link underline orange" target="_blank"> learning trail info site <a>
+			</div>
+      		<div class="bg-center bg-white cover aspect-ratio--object z-2">
+  				<div class="fl w-100 v-mid center pa3 pa5-l">
+    				<img src="https://raw.githubusercontent.com/buds-lab/the-building-data-genome-project/master/figures/Oldway.png" alt="" class="db w-100"/>
+    				    				  	<div href="#0" class="ph2 ph0-ns pb3 link w-100">
+      						<p class="f6 f5 fw7 mt2 gray tc">Subtitle of piece</p>
+    					</div>
+  				</div>
+      		</div>
+    	</div>
+    </div>
+
+
+   
+  </div>
+</div>
+</section>
+
+<section>
+	<div class="ph5-l ph1">
+		<div class="f4 f4-l fw5 mb3 mt4 mt0-ns dark-gray "> 
+			<p> <span class = "gray "> // </span>About </p>
+			<img src="img/about.png" alt="" class="db w-100"/>
+		</div>
+</section>
+
+
+<section class="center ph5-l pt3 ph1">
+
+	<div class="f4 f4-l fw5 mb3 mt4 mt0-ns dark-gray  "> 
+			<p> <span class = "gray "> // </span>Team </p>
+	</div>
+
+    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+      <div class="dtc w2 w3-ns v-mid">
+        <img src="img/team_clayton.png" class="ba b--black-10 db br2 w2 w3-ns h2 h3-ns"/>
+      </div>
+      <div class="dtc v-mid pl3">
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">Dr. Clayton Miller </h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60"> Assistant Professor</h2>
+      </div>
+      <div class="dtc v-mid">
+        <div class="w-100 tr">
+		  <a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="https://github.com/mrmrs" title="GitHub" target = "_blank">
+		   <i class="fab fa-github"></i>
+		    <span class="f6 ml3 pr2">GitHub</span>
+		  </a>
+
+
+		  <a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="http://bit.ly/2nsvUoS" title="GitHub" target = "_blank">
+		   <i class="fab fa-twitter"></i>
+		    <span class="f6 ml3 pr2">Twitter</span>
+		  </a>
+
+		  <a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="http://bit.ly/2ncAV9h" title="GitHub" target = "_blank">
+		   <i class="fab fa-linkedin"></i>
+		    <span class="f6 ml3 pr2">Linked In</span>
+		  </a>
+
+		  <a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="http://bit.ly/2nirRMQ" title="GitHub" target = "_blank">
+		  	<i class="fab fa-researchgate"></i>
+		    <span class="f6 ml3 pr2">Research Gate</span>
+		  </a>
+
+		  <a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="https://orcid.org/0000-0002-1186-4299" title="GitHub" target = "_blank">
+		    <span class="f6 ml3 pr2">ORCID</span>
+		  </a>
+
+		  	<a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="https://publons.com/author/1405785/clayton-miller#profile" title="GitHub" target = "_blank">
+		    <span class="f6 ml3 pr2">Publons</span>
+		  </a>
+
+        </div>
+      </div>
+    </article>
+
+    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+      <div class="dtc w2 w3-ns v-mid">
+        <img src="img/team_pjjayathissa.jpeg" class="ba b--black-10 db br2 w2 w3-ns h2 h3-ns"/>
+      </div>
+      <div class="dtc v-mid pl3">
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">Dr. Prageeth Jayathissa</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">Senior Researcher</h2>
+      </div>
+      <div class="dtc v-mid">
+        <div class="w-100 tr">
+		  <a class="no-underline near-white bg-animate bg-near-black hover-bg-gray inline-flex items-center ma2 tc br2 pa2" href="https://github.com/mrmrs" title="GitHub">
+		    <i class="fa fa-github"></i>
+		    <span class="f6 ml3 pr2">GitHub</span>
+		  </a>
+        </div>
+      </div>
+    </article>
+
+    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+      <div class="dtc w2 w3-ns v-mid">
+        <img src="img/team_tapeesh.png" class="ba b--black-10 db br2 w2 w3-ns h2 h3-ns"/>
+      </div>
+      <div class="dtc v-mid pl3">
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">Tapeesh </h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60"> Project Coordinator </h2>
+      </div>
+      <div class="dtc v-mid">
+        <div class="w-100 tr">
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href= "www.google.com" target="_blank">+ Follow</button>
+        </div>
+      </div>
+    </article>
+
+    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+      <div class="dtc w2 w3-ns v-mid">
+        <img src="img/team_matiasquintana.png" class="ba b--black-10 db br2 w2 w3-ns h2 h3-ns"/>
+      </div>
+      <div class="dtc v-mid pl3">
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">Matias</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">PhD Candidate</h2>
+      </div>
+      <div class="dtc v-mid">
+        <div class="w-100 tr">
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href= "www.google.com" target="_blank">+ Follow</button>
+        </div>
+      </div>
+    </article>
+
+    <article class="dt w-100 bb b--black-05 pb2 mt2" href="#0">
+      <div class="dtc w2 w3-ns v-mid">
+        <img src="img/team_mahmoud.jpg" class="ba b--black-10 db br2 w2 w3-ns h2 h3-ns"/>
+      </div>
+      <div class="dtc v-mid pl3">
+        <h1 class="f6 f5-ns fw6 lh-title black mv0">Mahmoud</h1>
+        <h2 class="f6 fw4 mt0 mb0 black-60">PhD Candidate</h2>
+      </div>
+      <div class="dtc v-mid">
+        <div class="w-100 tr">
+          <button class="f6 button-reset bg-white ba b--black-10 dim pointer pv1 black-60" href= "www.google.com" target="_blank">+ Follow</button>
+        </div>
+      </div>
+    </article>
+
+
+  </section>
+
+
+
+
+
+
+<!-- End Document
+	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+
+
+
+
+
+<!-- <section>
+
 <div class="cf w-100 ">
 
 	<div class="pa1-l ">
@@ -162,17 +413,4 @@
    
   </div>
 </div>
-</section>
-
-<section>
-	<div class="pa2">
-		<div class="f4 f4-l fw5 mb3 mt4 mt0-ns dark-gray  ph7-l"> <p> <span class = "gray "> // </span>About </p></div>
-		<div class = "ph7-l">
-BUDS Lab is a scientific research group that leverages data sources from the built and urban environments to improve the energy efficiency and conservation, comfort, safety and satisfaction of humans.
-</div>
-</section>
-
-
-<!-- End Document
-	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+</section> -->
